<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".VehiculosModFragment">

        <TextView
            android:id="@+id/txtQuetipodere"
            style="@style/txtIntermedium20"
            android:layout_width="355dp"
            android:layout_height="30dp"
            android:layout_marginTop="36dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/msg_que_tipo_de_re"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/msg_que_tipo_de_re" />

        <android.inputmethodservice.ExtractEditText
            android:id="@+id/viewRectangleTwentyFour"
            android:layout_width="330dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rectangle_bg_bluegray_100_radius_20"
            app:layout_constraintStart_toStartOf="@+id/txtQuetipodere"
            app:layout_constraintTop_toBottomOf="@+id/txtQuetipodere"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/modAceptar"
            style="@style/btnSolidRounded"
            android:layout_width="295dp"
            android:layout_height="65dp"
            android:layout_marginTop="360dp"
            android:gravity="center"
            android:text="@string/lbl_aceptar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewRectangleTwentyFour"
            tools:text="@string/lbl_aceptar" />

        <TextView
            android:id="@+id/modCancelar"
            style="@style/txtSolidRounded"
            android:layout_width="295dp"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:paddingStart="@dimen/_12pxh"
            android:paddingTop="@dimen/_6pxv"
            android:paddingEnd="@dimen/_23pxh"
            android:paddingBottom="@dimen/_7pxv"
            android:singleLine="true"
            android:text="@string/lbl_cancelar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modAceptar"
            tools:text="@string/lbl_cancelar" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>